force-app/main/default/objects/Department__c/fields/Avg_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Avg_Wait_Time__c</fullName>
    <label>Average Wait Time (mins)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>