force-app/main/default/objects/Department__c/fields/Floor_Wing__c.field-meta.xml
<CustomField>
    <fullName>Floor_Wing__c</fullName>
    <label>Floor/Wing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>