force-app/main/default/objects/Department__c/fields/Head_of_Department__c.field-meta.xml
<CustomField>
    <fullName>Head_of_Department__c</fullName>
    <label>Head of Department</label>
    <length>100</length>
    <type>Text</type>
</CustomField>