force-app/main/default/objects/Department__c/fields/Specialty_Tags__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Tags__c</fullName>
    <label>Specialty Tags</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>